Finished call_to_action html and css, wrapping up.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
                     <p class="hero_secondary_text">This website has some subtext that goes here under the main title.
                         It's a smaller font and the color is lower contrast
                     </p>
-                    <button class="hero_signup">Sign up</a>
+                    <button class="hero_signup">Sign up
                 </div>
                 <div class="hero_right">
                     <img class="hero_img" alt="Flaming Pumpkin" src="jessica-christian-QQ_AN0fx8gA-unsplash.jpg"></img>
@@ -64,7 +64,15 @@ body {
                      you're setting yourself up to feel like a failure most of the time.”</p>
                 <p class="quote_author">― Chris Hadfield, An Astronaut's Guide to Life on Earth</p>
             </div>
-            <div class="call_to_action"></div>
+            <div class="call_to_action">
+                <div class="call_to_action_left">
+                <h2 class="call_to_action_text_big">Call to action! It's time!</h2>
+                <p class="call_to_action_text_small">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="call_to_action_right"></div>
+                <button class="call_to_action_button">Sign up
+                </div>
+            </div>
             <div class="footer">
                 <p>Copyright @ The Odin Project</p>
             </div>
